Updating Swagger
